<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xl.findnow_final.EjemploFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout

        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:gravity="center"
            android:textColor="@color/colorBlanco"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registro" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/Registro_nombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nombres"
                android:inputType="text"
                android:textColor="@color/colorBlanco"
                android:shadowColor="@color/colorBlanco"
                android:textColorHighlight="@color/colorBlanco"
                android:textColorLink="@color/colorBlanco"
                android:textColorHint="@color/colorBlanco"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/Registro_apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Apellidos"
                android:inputType="text"
                android:textColor="@color/colorBlanco"
                android:shadowColor="@color/colorBlanco"
                android:textColorHighlight="@color/colorBlanco"
                android:textColorLink="@color/colorBlanco"
                android:textColorHint="@color/colorBlanco"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/Registro_cedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Cedula"
                android:inputType="text"
                android:textColor="@color/colorBlanco"
                android:shadowColor="@color/colorBlanco"
                android:textColorHighlight="@color/colorBlanco"
                android:textColorLink="@color/colorBlanco"
                android:textColorHint="@color/colorBlanco"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/Registro_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorBlanco"
                android:shadowColor="@color/colorBlanco"
                android:textColorHighlight="@color/colorBlanco"
                android:textColorLink="@color/colorBlanco"
                android:textColorHint="@color/colorBlanco"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Registro_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorBlanco"
                android:textColorHint="@color/colorBlanco"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/Registro_edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Edad"
                android:inputType="text"
                android:textColor="@color/colorBlanco"
                android:shadowColor="@color/colorBlanco"
                android:textColorHighlight="@color/colorBlanco"
                android:textColorLink="@color/colorBlanco"
                android:textColorHint="@color/colorBlanco"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/Registro_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Direccion"
                android:inputType="text"
                android:textColor="@color/colorBlanco"
                android:shadowColor="@color/colorBlanco"
                android:textColorHighlight="@color/colorBlanco"
                android:textColorLink="@color/colorBlanco"
                android:textColorHint="@color/colorBlanco"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnResgister"
            style="?android:textAppearanceSmall"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="16dp"
            android:background="#fd272a"
            android:textColor="@color/colorBlanco1"
            android:drawableLeft="@android:drawable/ic_partial_secure"
            android:text="Register"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>
